Adding old gen regions does not consider available free space

XMLWordPrintable

    • gc
    • b115
    • Not verified

      When adding old gen regions to the collection set G1 does not consider (like in G1CollectorPolicy::predict_will_fit() for young regions) whether there is actually enough space left in G1CollectorPolicy::finalize_old_cset_part().

      This may lead to evacuation failures/full gcs.

        1. 236-237.tar.gz
          457 kB
          Jenny Zhang
        2. micro-gc-stat.txt
          3 kB
          Jenny Zhang

            Assignee:
            Thomas Benson (Inactive)
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: