8142935: Adding old gen regions does not consider available free space

Track live data size as added to cset during mixed GCs

Reviewed-by: kbarrett, drwhite